Fri May  1 16:01:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: fixed the help strings for the header and library
	  dir switches, and updated to use AS_HELP_STRING.

Fri May  1 15:45:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBRUBY_LDSHARED): use $(CC) instead of cc.
	  a patch from Wataru Kimura at [ruby-dev:38225].

Fri May  1 13:12:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c, gc.c (_longjmp): never return.  see [ruby-core:23241]

Wed Apr 29 15:22:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_join): recursive array has no meaning as path
	  name.  [ruby-core:23329]

Tue Apr 28 23:05:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (get_ts): use realtime clock.  [ruby-dev:38354]

	* eval.c (rb_thread_stop_timer): clear thread_init while locking.

Tue Apr 28 19:10:42 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/test_timeout.rb: backported from 1.9.

Fri Apr 24 14:55:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_start_timer): guard condition was inverted.
	  [ruby-dev:38319]

Thu Apr 23 00:19:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_mload): initializes a variable.

Wed Apr 22 20:24:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_timeval): check out-of-range.  [ruby-core:23282]
	  [Bug #1396]

Wed Apr 22 12:20:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (proc_invoke): shares dmethod scope local variables.
	  a patch from coderrr at [ruby-core:23050]

	* gc.c (obj_free): do not free cloned scope local variables.

Tue Apr 21 09:20:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (init_mkmf): needs default library path even if
	  cross compiling.

Sun Apr 19 14:31:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_cleanup): the order of local variables on stack is
	  undefined.  should use outermost VALUE for ruby_init_stack.
